<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_noticias"
            android:icon="@drawable/ic_rss_feed_black_24dp"
            android:title="@string/noticias" />
        <item
            android:id="@+id/nav_perfil_academico"
            android:icon="@drawable/ic_timeline_black_24dp"
            android:title="@string/perfil_academico" />
        <item
            android:id="@+id/nav_comunicados"
            android:icon="@drawable/ic_email_black_24dp"
            android:title="@string/comunicados" />
        <item
            android:id="@+id/nav_eventos"
            android:icon="@drawable/ic_event_black_24dp"
            android:title="@string/eventos" />
        <item
            android:id="@+id/nav_horarios"
            android:icon="@drawable/ic_watch_later_black_24dp"
            android:title="@string/horarios" />
    </group>

    <item android:title="@string/mi_cuenta">
        <menu>
            <item
                android:id="@+id/nav_configuracion"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/configuracion" />
            <item
                android:id="@+id/nav_cerrar_sesion"
                android:icon="@drawable/ic_lock_black_24dp"
                android:title="@string/cerrar_sesion" />
        </menu>
    </item>

</menu>
